--- a/Angular2webapp/Angular2webapp/index.html
+++ b/Angular2webapp/Angular2webapp/index.html
@@ -7,7 +7,7 @@
     <meta charset=UTF-8>
     <meta name=viewport content="width=device-width,initial-scale=1">
     <base href=/ >
-    
+    <link rel="stylesheet" href="./dist/vendor.css" />
     <!--<script src="node_modules/core-js/client/shim.min.js"></script>
     <script src="node_modules/zone.js/dist/zone.js"></script>-->
 </head>
