--- a/Angular2webapp/Angular2webapp/index.html
+++ b/Angular2webapp/Angular2webapp/index.html
@@ -6,6 +6,8 @@
     <meta charset=UTF-8>
     <meta name=viewport content="width=device-width,initial-scale=1">    
     <link rel="stylesheet" href="./dist/vendor.css" />
+    <link rel="stylesheet" href="./dist/vendor.less.css" />
+    <link rel="stylesheet" href="./dist/app.less.css" />
 </head>
 <body>
     <my-app>Loading App</my-app>
