--- a/Angular2webapp/Angular2webapp/index.html
+++ b/Angular2webapp/Angular2webapp/index.html
@@ -5,17 +5,15 @@
     <base href=/ >
     <meta charset=UTF-8>
     <meta name=viewport content="width=device-width,initial-scale=1">    
-    <link rel="stylesheet" href="./dist/vendor.css" />
+    <!--<link rel="stylesheet" href="./dist/vendor.css" />-->
     <link rel="stylesheet" href="./dist/vendor.less.css" />
     <link rel="stylesheet" href="./dist/app.less.css" />
 </head>
 <body>
     <my-app>Loading App</my-app>
     <script src="node_modules/core-js/client/shim.min.js"></script>
-    <!--<script src="node_modules/es6-shim/es6-shim.min.js"></script>
-    <script src="node_modules/core-js/client/shim.js"></script>
-    <script src="node_modules/zone.js/dist/zone.js"></script>-->
-<script type="text/javascript" src="./dist/polyfills.js"></script>
+    <!--
+<script type="text/javascript" src="./dist/polyfills.js"></script>-->
 <script type="text/javascript" src="./dist/vendor.js"></script>
 <script type="text/javascript" src="./dist/app.js"></script></body>
 </html>
