Playing with bootstrap/styles

--- a/Angular2webapp/Angular2webapp/index.html
+++ b/Angular2webapp/Angular2webapp/index.html
@@ -12,8 +12,7 @@
 <body>
     <my-app>Loading App</my-app>
     <script src="node_modules/core-js/client/shim.min.js"></script>
-    <!--
-<script type="text/javascript" src="./dist/polyfills.js"></script>-->
-<script type="text/javascript" src="./dist/vendor.js"></script>
-<script type="text/javascript" src="./dist/app.js"></script></body>
+    <script type="text/javascript" src="./dist/polyfills.js"></script>
+    <script type="text/javascript" src="./dist/vendor.js"></script>
+    <script type="text/javascript" src="./dist/app.js"></script></body>
 </html>
