--- a/Angular2webapp/Angular2webapp/index.html
+++ b/Angular2webapp/Angular2webapp/index.html
@@ -4,13 +4,35 @@
     <title>Angular.io QuickStart</title>
     <base href=/ >
     <meta charset=UTF-8>
-    <meta name=viewport content="width=device-width,initial-scale=1">    
-    <!--<link rel="stylesheet" href="./dist/vendor.css" />-->
+    <meta name=viewport content="width=device-width,initial-scale=1">   
+    <link rel="stylesheet" href="./Loader.min.css" />
     <link rel="stylesheet" href="./dist/vendor.less.css" />
     <link rel="stylesheet" href="./dist/app.less.css" />
 </head>
 <body>
-    <my-app>Loading App</my-app>
+    <my-app>
+        <div class="loading-line">
+            <span class="loading-bit"></span>
+            <span class="loading-bit"></span>
+            <span class="loading-bit"></span>
+            <span class="loading-bit"></span>
+            <span class="loading-bit"></span>
+            <span class="loading-bit"></span>
+            <span class="loading-bit"></span>
+            <span class="loading-bit"></span>
+            <span class="loading-bit"></span>
+            <span class="loading-bit"></span>
+            <span class="loading-bit"></span>
+            <span class="loading-bit"></span>
+            <span class="loading-bit"></span>
+            <span class="loading-bit"></span>
+            <span class="loading-bit"></span>
+            <span class="loading-bit"></span>
+        </div>
+        <div class="loading-text">
+            Loading...
+        </div>
+    </my-app>
     <script src="node_modules/core-js/client/shim.min.js"></script>
     <script type="text/javascript" src="./dist/polyfills.js"></script>
     <script type="text/javascript" src="./dist/vendor.js"></script>
