--- a/Angular2webapp/Angular2webapp/401.2.html
+++ b/Angular2webapp/Angular2webapp/401.2.html
@@ -4,13 +4,14 @@
     <title>Angular.io QuickStart</title>
     <base href=/>
     <meta charset=UTF-8>
-    <meta name=viewport content="width=device-width,initial-scale=1">
+    <!--<meta name=viewport content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="./Loader.min.css" />
     <link rel="stylesheet" href="./dist/vendor.less.css" />
-    <link rel="stylesheet" href="./dist/app.less.css" />
+    <link rel="stylesheet" href="./dist/app.less.css" />-->
 </head>
 <body>
-    <my-app>
+    <h1>! ! ! Error 401.2 ! ! !</h1>
+    <!--<my-app>
         <div class="loading-line">
             <span class="loading-bit"></span>
             <span class="loading-bit"></span>
@@ -36,6 +37,6 @@
     <script src="node_modules/core-js/client/shim.min.js"></script>
     <script type="text/javascript" src="./dist/polyfills.js"></script>
     <script type="text/javascript" src="./dist/vendor.js"></script>
-    <script type="text/javascript" src="./dist/app.js"></script>
+    <script type="text/javascript" src="./dist/app.js"></script>-->
 </body>
 </html>
